--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,10 @@
   </head>
   <body>
     <h1>Headlines</h1>
+    <form>
+      <input type="text" name="publication" placeholder="search">
+      <input type="submit" value="Submit">
+    </form>
     {% for article in articles %}
         <a href="{{article.link}}" target="_blank"><b>{{ article.title }}</b></a><br>
         <i>{{ article.published }}</i><br>
